// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AndroidSetupPromptLayout renders per snapshot with a moreInfoLink 1`] = `
<main
  className="promptMainLayout"
>
  <h1
    className="promptHeader"
  >
    Header text
  </h1>
  <div
    className="promptMoreInfo"
  >
    <a
      href="https://test"
    >
      test link
    </a>
  </div>
  <div
    className="promptContent"
  >
    <p>
      child content
    </p>
  </div>
  <div
    className="promptNavButtonFooter"
  >
    <CustomizedDefaultButton
      text="left footer button"
    />
    <CustomizedPrimaryButton
      text="right footer button"
    />
  </div>
</main>
`;

exports[`AndroidSetupPromptLayout renders per snapshot without a moreInfoLink 1`] = `
<main
  className="promptMainLayout"
>
  <h1
    className="promptHeader"
  >
    Header text
  </h1>
  <div
    className="promptContent"
  >
    <p>
      child content
    </p>
  </div>
  <div
    className="promptNavButtonFooter"
  >
    <CustomizedDefaultButton
      text="left footer button"
    />
    <CustomizedPrimaryButton
      text="right footer button"
    />
  </div>
</main>
`;
